# rune

./: .gitattributes  .gitignore  .mcp.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md
.claude/: .agent-search-index.db  .agent-search-index.db-shm  CLAUDE.md  settings.json  talisman.yml
.claude-plugin/: marketplace.json
.claude/agents/: agent-spawn-reviewer.md  cleanup-completeness-reviewer.md  dead-prompt-detector.md  team-lifecycle-reviewer.md
.claude/echoes/: .search-index.db  .search-index.db-shm
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: README.md  discipline-engineering-field-notes.md  discipline-engineering.md  discipline-micro-tasking-and-qa.md  glm-5-setup.md  state-machine.md
docs/solutions/: README.md  (+1 more)
tests/: Makefile  conftest.py  run_harness.py  test_arc_batch_stop_hook.py  test_arc_demotion_gate.sh  test_arc_issues_stop_hook.py  test_checkpoint.py  test_enforce_teams.py  test_hooks.py  test_on_session_stop.py  test_on_teammate_idle.py  test_pre_compact_checkpoint.py  test_validate_gap_fixer_paths.py  test_validate_mend_fixer_paths.py
torrent/: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  Makefile  README.md  install.sh
torrent/bridge/: package.json  server.ts
torrent/src/: app.rs  callback.rs  channel.rs  checkpoint.rs  console.rs  diagnostic.rs  execution.rs  keybindings.rs  lock.rs  log.rs  main.rs  messaging.rs  monitor.rs  polling.rs  recovery.rs  resource.rs  resume.rs  scanner.rs  timeout.rs  tmux.rs  types.rs  ui.rs
torrent/tests/: test_channels_bridge.sh  test_channels_e2e.sh
(+1169 files in other folders)
