[package]
name = "torrent"
version = "0.6.3"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
glob = "0.3"
dirs = "6.0"
rand = "0.8"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
libc = "0.2"
